acrescentada tradução lot_group_item

--- a/config/locales/services/importer.pt-BR.yml
+++ b/config/locales/services/importer.pt-BR.yml
@@ -12,3 +12,4 @@ pt-BR:
         resources:
           cooperative: "Associação CNPJ %{value}"
           covenant: "Convênio %{value}"
+          lot_group_item: "Convênio %{value}"
