Novo modelo de edital para tipo "Obras"

--- a/config/locales/pdf.en-US.yml
+++ b/config/locales/pdf.en-US.yml
@@ -22,6 +22,8 @@
               item_classification: Item classification
               item_quantity: Quantity
               item_unit: Unit
+              professional: Professional
+              quantity: Quantity
         minute:
           invites_providers: 'Companies called via application: '
           proposals_providers: 'Names of companies that submitted proposals: '
