Ajustes da tradução para o Francês

--- a/config/locales/devise.fr-FR.yml
+++ b/config/locales/devise.fr-FR.yml
@@ -2,7 +2,7 @@
 fr-FR:
   devise:
     confirmations:
-      confirmed: "Merci de confirmer votre compte!"
+      confirmed: "Merci de confirmer votre compte !"
       send_instructions: "Dans quelques minutes vous recevrez un e-mail avec des instructions pour la confirmation de votre compte."
       send_paranoid_instructions: "Si votre adresse de courriel est enregistrée, vous recevrez un message avec des instructions pour la confirmation de votre compte."
     failure:
@@ -19,9 +19,9 @@ fr-FR:
       # custom subjects per-model with "#{model}_subject"
       confirmation_instructions:
         subject: "Instructions de confirmation"
-        user_subject: "Bienvenue! Veuillez confirmer votre compte à Alpop"
+        user_subject: "Bienvenue ! Veuillez confirmer votre compte à Alpop"
       reset_password_instructions:
-        user_subject: &reset_password_subject "Recupération du code d'accès"
+        user_subject: &reset_password_subject "Récupération du code d'accès"
         supplier_subject: *reset_password_subject
         admin_subject: *reset_password_subject
       unlock_instructions:
@@ -39,7 +39,7 @@ fr-FR:
       success: "Authentifié avec succès avec un compte de %{kind}."
     passwords:
       no_token: "Vous ne pouvez accéder à cette page que par un courriel d'échange de code d'accès. Si vous accédez déjà au site d'après un courriel, veuillez vérifier si l'URL fournie est complète."
-      send_instructions: "Dans quelques minutes vous recevrez un e-mail avec des instructions pour la confirmation de votre compte."
+      send_instructions: "Dans quelques minutes vous recevrez un e-mail avec des instructions pour la substitution de votre code d'accès."
       send_paranoid_instructions: "Si votre adresse de courriel est enregistrée, vous recevrez un message avec un lien pour récupérer le code d'accès par e-mail."
       updated: "Votre code d'accès a été modifié avec succès. Vous êtes connecté."
       updated_not_active: "Votre code d'accès a été modifié avec succès."
@@ -47,14 +47,14 @@ fr-FR:
       destroyed: "Votre compte a été annulé avec succès. Nous espérons de vous revoir bientôt."
       signed_up: "Connexion réussie. Si vous n'êtes pas autorisé, une confirmation sera envoyée par courriel."
       signed_up_but_inactive: "Votre enregistrement est réussi. Cependant, il n'a pas été possible de vous connecter parce que votre compte n'a pas été activé."
-      signed_up_but_locked: "Votre enregistrement est réussi. Cependant, il n'a pas été possible de vous connecter parce que votre compte n'a pas été activé."
+      signed_up_but_locked: "Votre enregistrement est réussi. Cependant, il n'a pas été possible de vous connecter parce que votre compte est bloqué."
       signed_up_but_unconfirmed: "Un message avec un lien de confirmation a été envoyé à votre adresse de courriel. Veuillez ouvrir le lien pour confirmer votre compte."
       update_needs_confirmation: "Vous avez mis à jour votre compte avec succès, mais votre nouvelle adresse de courriel doit être confirmée. Veuillez y accéder et cliquer sur le lien de confirmation que nous vous avons envoyé."
       updated: "Votre compte a été mis à jour avec succès."
     sessions:
       signed_in: "Connexion réussie."
-      signed_out: "Vous vous êtes êtes déconnecté avec succès."
-      already_signed_out: "Vous vous êtes êtes déconnecté avec succès."
+      signed_out: "Vous êtes déconnecté avec succès."
+      already_signed_out: "Vous êtes déconnecté avec succès."
     unlocks:
       send_instructions: "Dans quelques minutes vous recevrez un e-mail avec des instructions pour débloquer votre compte."
       send_paranoid_instructions: "Si votre compte existe déjà, dans quelques minutes vous recevrez un e-mail avec des instructions pour le débloquer."
@@ -67,5 +67,5 @@ fr-FR:
       not_found: "non trouvé"
       not_locked: "non bloqué"
       not_saved:
-        one: "Il a été impossible de sauvegarder %{resource}: 1 erreur"
-        other: "Il a été impossible de sauvegarder %{resource}: %{count} erreurs."
+        one: "Il a été impossible de sauvegarder %{resource} : 1 erreur"
+        other: "Il a été impossible de sauvegarder %{resource} : %{count} erreurs."
