--- a/config/locales/notifications/proposals.fr-FR.yml
+++ b/config/locales/notifications/proposals.fr-FR.yml
@@ -18,7 +18,7 @@
         body: Le réviseur a accepté le refus du fournisseur <strong>%s</strong> de l'appel d'offres <strong>%s</strong>.
 
       fail:
-        title: Il faut revoir toutes les offres.
+        title: Il faut revoir les offres.
         body: "L'offre du fournisseur <strong>%s</strong> de l'appel d'offres <strong>%s</strong> a été rejetée, par la raison: <strong>%s</strong>. Il faudra revoir les offres encore une fois."
 
 
@@ -29,7 +29,7 @@
 
       lot_coop_refused:
         title: Offre refusée.
-        body: Le lot <strong>%s</strong> de l'appel d'offres <strong>%s</strong> a une offre rejetée et peut être revu.
+        body: L'appel d'offres <strong>%s</strong> a une offre refusée et peut être revu.
 
       lot_accepted:
         title: Offre gagnante.
@@ -37,7 +37,7 @@
 
       lot_refused:
         title: Offre refusée acceptée.
-        body: Le réviseur a accepté le refus de l'offre du fournisseur <strong>%s</strong> pour le lot  <strong>%s</strong> de l'appel d'offres <strong>%s</strong>.
+        body: Le réviseur a accepté le refus de l'offre du fournisseur <strong>%s</strong> pour le lot <strong>%s</strong> de l'appel d'offres <strong>%s</strong>.
 
       lot_fail:
         title: Il faut revoir les offres.
