--- a/config/locales/en-US.yml
+++ b/config/locales/en-US.yml
@@ -159,7 +159,7 @@ en-US:
     currency:
       format:
         delimiter: ","
-        format: "%u%n"
+        format: "%u %n" # specific for pt-BR implantation
         precision: 2
         separator: "."
         significant: false
