--- a/config/locales/es-PY.yml
+++ b/config/locales/es-PY.yml
@@ -159,7 +159,7 @@ es-PY:
     currency:
       format:
         delimiter: "."
-        format: "%u%n"
+        format: "%u %n" # specific for pt-BR implantation
         precision: 2
         separator: ","
         significant: false
