--- a/config/locales/services/contracts/system_refuse.fr-FR.yml
+++ b/config/locales/services/contracts/system_refuse.fr-FR.yml
@@ -2,4 +2,5 @@
   services:
     contracts:
       system_refuse:
-        comment: 'Contrat refusé par le système.'
+        comment: 'Contrat refusé par le système'
+
